Fixed Bug with Content not Showing on Menu Click

--- a/css/main.css
+++ b/css/main.css
@@ -291,6 +291,10 @@ input, textarea{
 
 /* Project */
 .content_project {
+
+    position: absolute;
+    visibility: hidden;
+
     width: 100%;
     height: 100%;
     box-sizing: border-box;
